--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,4 +1,11 @@
 *{ margin: 0; box-sizing: border-box;}
+a{ text-decoration: none;}
 body{ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
 .container{ max-width: 1200px; margin: auto;}
+header{ padding: 10px;  background-color: #cfc;}
+nav{ padding: 10px;  background-color: #333;}
+nav a{ display: inline-block ; padding: 6px 10px; color: #ccc;}
+footer{ padding: 10px;  background-color: #fcc;}
+main{ padding: 10px;  background-color: #ccf;}
+
 
